splitting matching into single elements

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -9,5 +9,5 @@ ${PROG}: lex.yy.c
 	gcc -o ${PROG} lex.yy.c -lfl
 
 test: all
-	./slonka < test_1.txt
-
+	#./slonka < test_1.txt
+	./slonka < test_small.txt
