Dodane duzo rzeczy i w sumie nie wiem co

--- a/lab3/makefile
+++ b/lab3/makefile
@@ -5,7 +5,7 @@ BFLAGS =
 .PHONY: test clean help
 
 #change to release to get default release
-default: debug
+default: release
 
 all: ${PROG}
 release: ${PROG}
